css/content-layout.css
body {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

.container {
    display: grid;
    grid-template-columns: auto;
}

.container > header, footer  {
    color: #e82727;
    padding: 0px 20px;
    background: #80d4ff;
}

.content-container {
    display: grid;
    grid-template-columns: auto;
}

.left-pane-grid {
    display: grid;
    grid-template-columns: auto;
}

.left-pane-item {
    background-color: #e6f7ff;
    box-shadow: 0px 3px 5px gray;
    padding: 4px;
    margin-top: 0px;
    margin-bottom: 20px;
}

.head-container {
    display: grid;
    grid-template-columns: auto;
}

header {
    justify-items: center;
    text-align: center;
    box-shadow: 0px 5px 9px gray;
}

header h1 {
    font-size: 1.4em;
}

/* orignal pic size = 282x262 */
#logo {
    display: block;
    max-width: 75px;
    max-height: 70px;
    width: auto;
    height: auto;
}

#head-nav {
    justify-self: right;
}

#burger {
    float: right;
    width: 30px;
    height: 30px;
}

nav {
    box-shadow: 0px 5px 9px gray;
}

nav ul {
    list-style: none;
}

nav a {
    color: white;
    text-decoration: none;
    display: inherit;
    padding: 7px 3px;
}

.container nav {
    background: #656262;
}

section {
    padding-left: 20px;
    padding-right: 13px;
}

.content {
    margin-left: -7px;
    width: 94%;
}

.sub-section {
    padding-left: 10px;
    margin-top: 0px;
}

footer {
    padding: 15px 0px;
    margin-top: 10px;
}

footer span {
    font-size: .7em;
    float: right;
    padding-right: 5px;
}

.bot-border {
    border-bottom: 1px solid gray;
}

.onpage {
    background: #e82727;
    color: #fff;
    text-decoration: none;
}

.link-hover:hover {
    background: #e82727;
    color: #fff;
    transition: .3s;
}

/* media query for content-container/twitter sidebar */
@media only screen and (min-width: 1065px) { 
    .content-container {
        grid-template-columns: auto auto;
        grid-column-gap: 30px;
    }

    .left-pane {
        grid-column: 1;
    }
    
    .right-pane {
        grid-column: 2;
    }
}

/* media query for grid layout */
@media only screen and (min-width: 652px) {
    .container {
        grid-template-columns: 10% auto 10%;
    }

    .container header,
    .container nav,
    .container footer {
        grid-column: span 3;
    }

    .container header {
        padding: 7px 20px 7px 20px;
    }

    header {
        box-shadow: none;
    }

    header h1 {
        padding: 0 0 0 15px;
        align-self: center;
        font-size: 2.5em;
    }

    .left-pane-item {
        padding: 7px;
    }

    #logo {
        display: block; 
        max-width: 120px;
        max-height: 111px;
        width: auto;
        height: auto;
    }

    .head-container {
        display: flex;
        padding-bottom: 15px;
    }

    nav {
        box-shadow: 0px 5px 9px gray;
    }

    .container section {
        grid-column: 2;
        padding: 0;
    }

    .content {
        margin-left: 0px;
        width: 100%;
    }

    nav ul {
        list-style: none;
        margin: 0;
        padding-left: 20px;
    }

    nav ul li {
        display: inline-block;
        float: left;
    }

    nav a {
        padding: 10px 12px;
    }

    .bot-border {
        border: none;
    }

    .onpage {
        background: #e82727;
        text-decoration: none;
    }

    footer span {
        font-size: .9em;
        float: right;
        padding-right: 10px;
    }

    .toggle {
        display: none;
    }

    .left-pane {
        max-width: 850px;
    }

    /* Not centering single-column pages because Kevin
       thinks it looks weird. */
    /*.content-centered {
        margin: 0 auto;
    }*/

    /*#title {
        max-width: 850px;
        margin: .83em auto;
    }*/
}

@media only screen and (max-width: 705px) {
    header h1 {
        align-self: unset;
        margin: 10px;
        padding: 0px;
    }
}

/* media query for nav styles */
@media only screen and (max-width: 651px) {
    #nav {
        transition: transform .3s ease-in-out;
        top: 0;
        bottom: 0;
        position: fixed;
        width: 90%;
        max-width: 300px;
        right: -500px;
        box-shadow: 0px 5px 9px gray;
    }

    #nav:target {
        transform: translateX(-500px);
    }

    nav ul {
        margin: 0;
        padding-top: 15px;
    }

    .close {
        text-align: left;
        display: block;
        text-decoration: none;
        font-size: 3em;
        position: relative;
        padding: 0 7px;
        width: 30px;
        line-height: 30px;
        margin-top: 15px;
    }

    .open {
        text-align: left;
    }
}

